--- a/2_2_pandas.qmd
+++ b/2_2_pandas.qmd
@@ -169,7 +169,7 @@ df[['최저기온', '최고기온']]
 ### 4.4.2. 레이블이나 조건 표현으로 선택
 + 레이블(label)을 기반으로 행과 열을 선택할 때 `loc[]` 속성을 사용함
   + 열 이름을 이용하여 특정 열을 선택할 수 있음
-  + 인덱스 이름을 이용하여 특정 행을 선택할 수 있음
+  + 인덱스를 이용하여 특정 행을 선택할 수 있음
   + 조건식을 사용하여 특정 조건을 만족하는 행을 선택할 수 있음
     + 조건이 2개 이상인 경우, 각 조건을 `()`로 묶고 논리 연산자(`&`, `|`, `~`)를 사용함
 
@@ -182,7 +182,7 @@ df.loc[:, ['날짜', '최고기온']]
 
 ```{python}
 # 행 선택1
-df.loc[0:3,]
+df.loc[0:3]
 ```
 
 ```{python}
@@ -193,12 +193,13 @@ df.loc['2022-06-05']
 
 ```{python}
 # 헹 선택3 : 조건을 만족하는 행 선택
-df.loc[df['평균기온']>=25]
+mask = df['평균기온']>=25
+df.loc[mask]
 ```
 
 <br>
 
-### 4.4.3. 불 인덱싱
+### 4.4.3. 부울 인덱싱
 + 조건식을 사용하면 각 행이 조건을 만족하는지 여부를 `True` 또는 `False`로 반환함
 + 그 결과인 부울(boolean)형 시리즈를 `[]`에 전달하면 `True`에 해당하는 행만 선택할 수 있음
 + 조건이 2개 이상인 경우, 각 조건을 `()`로 묶고 논리 연산자(`&`, `|`, `~`)를 사용함
@@ -206,21 +207,21 @@ df.loc[df['평균기온']>=25]
 <br>
 
 ```{python}
-# 불 인덱싱1 : 조건을 만족하는 행 선택
-w = df['최고기온']>=30
-df[w]
+# 부울 인덱싱1 : 조건을 만족하는 행 선택
+mask = df['최고기온']>=30
+df[mask]
 ```
 
 ```{python}
-# 불 인덱싱2 : 조건을 만족하는 행과 특정 열 선택
-w = df['최고기온']>=30
-df[w][['최저기온', '최고기온']]
+# 부울 인덱싱2 : 조건을 만족하는 행과 특정 열 선택
+mask = df['최고기온']>=30
+df[mask][['최저기온', '최고기온']]
 ```
 
 ```{python}
 # 불 인덱싱3 : 제일 더웠던 날 선택
-w = df['최고기온']==df['최고기온'].max()
-df[w]
+mask = df['최고기온']==df['최고기온'].max()
+df[mask]
 ```
 
 ```{python}
@@ -256,7 +257,7 @@ df.columns
 
 ```{python}
 # 열 이름 변경
-df.columns = ['제목', '이름', '인원수', '발매일', '장르', '유형']
+df.columns = ['노래제목', '가수', '인원수', '발매일', '장르', '유형']
 df.head()
 ```
 
@@ -268,7 +269,7 @@ df.dtypes
 
 ```{python}
 # 새로운 열 생성
-df['년도'] = df['발매일'].dt.year
+df['연도'] = df['발매일'].dt.year
 df['월'] = df['발매일'].dt.month
 df['일'] = df['발매일'].dt.day
 df.head()
@@ -285,8 +286,9 @@ df.head()
 ```{python}
 #| colab: {base_uri: https://localhost:8080/, height: 347}
 # 데이터 그룹핑1
-newdata = df.groupby(['장르']).count()                            # df.value_counts('장르')
-pd.DataFrame(newdata['제목'])
+newdata = df.groupby(['장르']).count()
+pd.DataFrame(newdata['노래제목'])
+# df.value_counts('장르')
 ```
 
 ```{python}
@@ -308,7 +310,7 @@ pd.DataFrame(newdata)
 + 결측 데이터 처리
   + 가장 간단한 방법은 `dropna()` 메소드를 이용하여 결측값이 포함된 행이나 열을 삭제하는 것임
     + `axis=0`이면 행, `axis=1`이면 열을 삭제함
-  + `fillna()` 메소드를 이용하여 결측값을 최빈값이나 평균으로 대체할 수도 있음
+  + `fillna()` 메소드를 이용하여 결측값을 최빈값이나 평균, 중앙값으로 대체할 수도 있음
 
 <br>
 
@@ -325,7 +327,9 @@ df[df['Embarked'].isna()]
 
 ```{python}
 # 각 열별 결측값 개수 확인
-df.isnull().sum()
+# 부울형은 산술 연산 시 True는 1, False는 0으로 계산되므로
+# isna() 결과에 sum()을 적용하면 결측값 개수가 계산됨
+df.isna().sum()
 ```
 
 ```{python}
@@ -343,13 +347,13 @@ df.dropna(axis=0)
 # 결측값을 최빈값으로 대체
 embarked_mode = df['Embarked'].mode()[0]
 df['Embarked'] = df['Embarked'].fillna(embarked_mode)
-df.isnull().sum()
+df.isna().sum()
 ```
 
 ```{python}
 # 결측값을 평균으로 대체
 age_mean = df['Age'].mean()
 df['Age'] = df['Age'].fillna(age_mean)
-df.isnull().sum()
+df.isna().sum()
 ```
 
