--- a/2_4_seaborn.qmd
+++ b/2_4_seaborn.qmd
@@ -8,7 +8,7 @@ jupyter: python3
 + Seaborn
   + Matplotlib 라이브러리를 기반으로 개발된 고급 통계 데이터 시각화 라이브러리
   + 다양한 테마와 통계 그래프를 지원하며, 시각적으로 세련된 그래프를 쉽게 생성할 수 있음
-  + Matplotlib 라이브러리에 의존하므로, 사용 시 함께 불어와야 함
+  + Matplotlib 라이브러리에 의존하므로, 사용 시 함께 불러와야 함
 
 <br>
 
@@ -20,10 +20,13 @@ jupyter: python3
 
 <br>
 
-## 6.2. 기본 시각화 유형
 + \[데이터\] 공공데이터포털에서 제공하는 2020년 국민건강보험공단 건강검진 정보
   + gender, height, weight, waist, smoking, drinking 등 18개 변수
   + \[실습파일\] [05_data1.csv](./data/05_data1.csv)
+
+<br>
+
+## 6.2. 막대 그래프
 
 <br>
 
@@ -51,6 +54,8 @@ data.head()
 
 ```{python}
 # 데이터 전처리 : 라벨 매핑(label mapping)
+# replace() 함수는 명시되지 않은 값을 그대로 유지하지만,
+# map() 함수는 명시되지 않은 값을 NaN으로 처리함
 data6 = data.copy()
 data6 = data6.loc[:, ['gender', 'height', 'weight', 'waist', 'drinking', 'smoking']]
 data6['gender'] = data['gender'].replace({1: 'M', 2: 'F'})
@@ -91,8 +96,12 @@ plt.tight_layout(rect=[0, 0, 1, 0.99])
 plt.show()
 ```
 
+## 6.3. 히스토그램
+
+<br>
+
 ```{python}
-# 데이터 전처리
+# 데이터 전처리 : 성별에 따라 데이터 분리
 maledata = data6.copy()
 maledata = maledata.loc[maledata['gender']=='M',:]
 
@@ -126,11 +135,15 @@ plt.legend()
 plt.show()
 ```
 
+## 6.4. 상자수염 그래프
+
+<br>
+
 ```{python}
 # 상자수염 그래프 : 성별 및 음주 여부에 따른 몸무게 분포
 plt.figure(figsize=(8, 4))
 plt.title('Weight By Gender and Drinking')
-sns.boxplot(x='drinking', y='weight', hue='gender', width=0.5, data=data6)
+sns.boxplot(x='drinking', y='weight', hue='gender', dodge = True, width=0.7, gap = 0.1, data=data6)
 plt.show()
 ```
 
@@ -138,49 +151,15 @@ plt.show()
 # 상자수염 그래프 : 성별 및 흡연 상태에 따른 몸무게 분포
 plt.figure(figsize=(8, 6))
 plt.title('Weight By Gender and Drinking')
-sns.boxplot(x='weight', y='smoking', hue='gender', width=0.5, data=data6, orient='h')
+sns.boxplot(x='weight', y='smoking', hue='gender', width=0.7, gap=0.1, data=data6, orient='h')
 plt.show()
 ```
+
+## 6.5. 카운트 플롯(count plot)
+- 범주형 변수의 각 항목별 빈도를 막대 그래프로 표현함
+- 데이터의 범주별 분포를 직관적으로 파악할 수 있음
 
 <br>
-
-## 6.3. 고급 시각화 유형
-
-|시각화 유형|설명|
-|:------:|:------------------------|
-|스트립 플롯 <br>(strip plot)|- 데이터 분포를 요약하여 간략히 띠 형태로 시각화함 <br>- 일반적으로 x축에는 범주형 변수, y축에는 수치형 변수를 지정함 <br>- 주로 데이터 수가 적을 때 사용됨|
-|스웜 플롯 <br>(swarm plot)|- 스트립 플롯과 유사하지만, 점들을 겹치지 않도록 자동으로 위치를 조정함 <br>- 분포를 보여줄 때 효과적이나, 데이터 수가 많을 때에는 개수를 대략적으로 파악하기 어려움|
-|카운트 플롯 <br>(count plot)|- 범주형 변수의 각 항목별 빈도를 막대 그래프로 표현함 <br>- 데이터의 범주별 분포를 직관적으로 파악할 수 있음|
-|바이올린 플롯 <br>(violin plot)|- 커널 밀도 추정(KDE)을 이용하여 데이터의 분포를 시각화함 <br>- 상자수염 그래프와 KDE를 결합한 형태로 중앙값, 사분위수, 전체 분포를 동시에 보여줌 <br>- 분포를 비교하는 데 효과적이나, 데이터 수가 적을 경우 왜곡된 해석 가능성 있음|
-|히트맵 <br>(heatmap)|- 행과 열로 이루어진 2차원 행렬 데이터를 색상으로 시각화함 <br>- 두 범주형 변수 간의 관계나 상관관계를 나타낼 때 사용 <br>- 색상의 강도를 통해 값의 크기를 비교할 수 있음 <br>- 예 : 상관행렬, 교차표 등|
-
-<br>
-
-```{python}
-# 스트립 플롯
-plt.figure(figsize=(8, 4))
-plt.title('Height vs Weight by Gender - Strip Plot')
-sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='dark', data=femaledata)
-sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='Set1', data=maledata)
-plt.legend()
-plt.show()
-```
-
-```{python}
-# 데이터 전처리
-maledata100 = maledata.head(100)
-femaledata100 = femaledata.head(100)
-```
-
-```{python}
-# 스웜 플롯
-plt.figure(figsize=(8, 4))
-plt.title('Height vs Weight by Gender - Swarm Plot')
-sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='dark', data=femaledata100)
-sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='Set1', data=maledata100)
-plt.legend()
-plt.show()
-```
 
 ```{python}
 # 카운트 플롯1 : 음주 여부에 따른 성별 분포
@@ -191,6 +170,7 @@ plt.show()
 ```
 
 ```{python}
+#| scrolled: true
 # 카운트 플롯2 : 흡연 상태에 따른 성별 분포
 plt.figure(figsize=(5, 3))
 plt.title('Gender and Smoking')
@@ -199,11 +179,76 @@ sns.countplot(y='smoking', hue='gender',
 plt.show()
 ```
 
+## 6.5. 히트맵(heatmap)
+- 행과 열로 이루어진 2차원 행렬 데이터를 색상으로 시각화함
+- 두 범주형 변수 간의 관계나 상관관계를 나타낼 때 사용
+- 색상의 강도를 통해 값의 크기를 비교할 수 있음
+- 예 : 상관행렬, 교차표 등
+
+<br>
+
+```{python}
+# 데이터 전처리 : 키, 몸무게, 허리둘레, 수축기 혈압, 이완기 혈압, 총콜레스테롤, HDL 콜레스테롤, LDL 콜레스테롤 변수 선택
+data8 = data.copy()
+data8 = data8.loc[:, ['height', 'weight', 'waist', 'systolic', 'diastolic', 'cholesterol', 'HDL', 'LDL']]
+```
+
+```{python}
+# 히트맵 : 8개의 건강 지표 간 상관관계
+# 상관계수는 -1에서 +1 사이의 값을 가지므로, vmin=-1, vmax=1 옵션 설정으로 색상 범위의 균형을 맞춤
+correlation_data8 = data8.corr()
+upp_mat = np.triu(correlation_data8)
+
+plt.figure(figsize=(8, 6))
+plt.title('Correlation Heatmap')
+sns.heatmap(correlation_data8, annot=True, mask=upp_mat, cmap='seismic', vmin=-1, vmax=1)
+plt.xticks(rotation=45)
+plt.show()
+```
+
+<br>
+
+## 6.7. 기타 시각화
+
+|시각화 유형|설명|
+|:------:|:------------------------|
+|스트립 플롯 <br>(strip plot)|- 데이터 분포를 요약하여 간략히 띠 형태로 시각화함 <br>- 일반적으로 x축에는 범주형 변수, y축에는 수치형 변수를 지정함 <br>- 주로 데이터 수가 적을 때 사용됨|
+|스웜 플롯 <br>(swarm plot)|- 스트립 플롯과 유사하지만, 점들을 겹치지 않도록 자동으로 위치를 조정함 <br>- 분포를 보여줄 때 효과적이나, 데이터 수가 많을 때에는 개수를 대략적으로 파악하기 어려움|
+|바이올린 플롯 <br>(violin plot)|- 커널 밀도 추정(KDE)을 이용하여 데이터의 분포를 시각화함 <br>- 상자수염 그래프와 KDE를 결합한 형태로 중앙값, 사분위수, 전체 분포를 동시에 보여줌 <br>- 분포를 비교하는 데 효과적이나, 데이터 수가 적을 경우 왜곡된 해석 가능성 있음|
+
+<br>
+
+```{python}
+# 스트립 플롯 : 키와 몸무게, 성별의 관계
+plt.figure(figsize=(8, 4))
+plt.title('Height vs Weight by Gender - Strip Plot')
+sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='dark', data=femaledata)
+sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='Set1', data=maledata)
+plt.legend()
+plt.show()
+```
+
+```{python}
+# 데이터 전처리 : 남성, 여성 각각 100개 데이터 선택
+maledata100 = maledata.head(100)
+femaledata100 = femaledata.head(100)
+```
+
+```{python}
+# 스웜 플롯 : 키와 몸무게, 성별의 관계
+plt.figure(figsize=(8, 4))
+plt.title('Height vs Weight by Gender - Swarm Plot')
+sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='dark', data=femaledata100)
+sns.stripplot(x='height', y='weight', hue='gender', alpha=0.5, palette='Set1', data=maledata100)
+plt.legend()
+plt.show()
+```
+
 ```{python}
 # 바이올린 플롯1 : 성별 및 음주 여부별 몸무게(120 미만) 분포
 plt.figure(figsize=(5, 3))
 plt.title('Weight By Gender and Drinking (Under 120kg)')
-sns.violinplot(x='gender', y='weight', hue='drinking', data=data6[data6.weight<120])
+sns.violinplot(x='gender', y='weight', hue='drinking', gap=0.1, data=data6[data6.weight<120])
 plt.show()
 ```
 
@@ -211,24 +256,7 @@ plt.show()
 # 바이올린 플롯2 : 성별 및 음주 여부별 허리둘레(150 미만) 분포
 plt.figure(figsize=(5, 5))
 plt.title('Waist By Gender and Drinking (Under 150cm)')
-sns.violinplot(y='gender', x='waist', hue='drinking', data=data6[data6.waist<150])
-plt.show()
-```
-
-```{python}
-# 데이터 전처리
-data8 = data.copy()
-data8 = data8.loc[:,['height', 'weight', 'waist', 'systolic', 'diastolic', 'cholesterol', 'HDL', 'LDL']]
-```
-
-```{python}
-# 히트맵 : 상관행렬
-correlation_data8 = data8.corr()
-upp_mat = np.triu(correlation_data8)
-
-plt.figure(figsize=(8, 6))
-plt.title('Correlation Heatmap')
-sns.heatmap(correlation_data8, annot=True, cmap='seismic', mask=upp_mat, vmin=-1, vmax=1)
+sns.violinplot(y='gender', x='waist', hue='drinking', gap=0.1, data=data6[data6.waist<150])
 plt.show()
 ```
 
